add create card method, openapi configuration + tests
