# src/main/java/com/example/bankcards/dto/request/CardCreateRequestDto.java
@@ -1,0 +1,13 @@
+package com.example.bankcards.dto.request;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+
+import java.util.UUID;
+
+@Data
+public class CardCreateRequestDto {
+
+    @NotNull
+    private UUID ownerId;
+}
